modalWindow: Add modal window functionality and styling

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
     />
     <link rel="stylesheet" href="/style/style.css">
+    <!-- <link rel="stylesheet" href="/test.css"> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel- React</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/abf4226251.js" crossorigin="anonymous"></script>
   </body>
